--- a/templates/layout/sidebar.html
+++ b/templates/layout/sidebar.html
@@ -7,7 +7,7 @@
                 <a href="/"><i class="fa fa-dashboard fa-fw"></i> Beranda</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-envelope-o"></i> Tata Usaha<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-briefcase"></i> Tata Usaha<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
                         <a href="/tatausaha/atk">Alat Tulis Kantor</a>
@@ -32,6 +32,9 @@
                     </li>
                     <li>
                         <a href="/tatausaha/surat_masuk">Surat Masuk</a>
+                    </li>
+                    <li>
+                        <a href="/tatausaha/tugas_belajar">Tugas Belajar</a>
                     </li>
                 </ul>
             </li>
