--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -4,7 +4,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Mini HRD by Codepolitan</title>
+    <title>SI Angkasa</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/static/vendors/sb-admin/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,8 +19,12 @@
     <link href="/static/vendors/sb-admin/bower_components/morrisjs/morris.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="/static/vendors/sb-admin/bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/vendors/sb-admin/bower_components/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!--Weather icons-->
     <link href="/static/vendors/sb-admin/bower_components/weathericons/css/weather-icons.min.css" rel="stylesheet" type="text/css">
     <!--foricon.css-->
     <link href="/static/vendors/sb-admin/dist/css/foricons.css" rel="stylesheet" type="text/css">
+    <!--Materialize-->
+    {% comment %}
+      <link href="/static/vendors/sb-admin/bower_components/materialize/css/materialize.min.css" rel="stylesheet" type="text/css">
+    {% endcomment %}
