add template for each model

--- a/templates/layout/sidebar.html
+++ b/templates/layout/sidebar.html
@@ -10,31 +10,31 @@
                 <a href="#"><i class="fa fa-briefcase"></i> Tata Usaha<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a href="/tatausaha/atk">Alat Tulis Kantor</a>
+                        <a href="/tatausaha/atk/"><i class="fa fa-caret-right"></i> Alat Tulis Kantor</a>
                     </li>
                     <li>
-                        <a href="/tatausaha/diklat">Diklat</a>
+                        <a href="/tatausaha/diklat/"><i class="fa fa-caret-right"></i> Diklat</a>
                     </li>
                     <li>
-                        <a href="/tatausaha/satpam">Jadwal Dinas Satpam</a>
+                        <a href="/tatausaha/jadwalsatpam/"><i class="fa fa-caret-right"></i> Jadwal Dinas Satpam</a>
                     </li>
                     <li>
-                        <a href="/tatausaha/listrik">Listrik</a>
+                        <a href="/tatausaha/listrik/"><i class="fa fa-caret-right"></i> Listrik</a>
                     </li>
                     <li>
-                        <a href="/tatausaha/memo">Memo</a>
+                        <a href="/tatausaha/memo/"><i class="fa fa-caret-right"></i> Memo</a>
                     </li>
                     <li>
-                        <a href="/tatausaha/pegawai">Pegawai</a>
+                        <a href="/tatausaha/pegawai/"><i class="fa fa-caret-right"></i> Pegawai</a>
                     </li>
                     <li>
-                        <a href="/tatausaha/surat_keluar">Surat Keluar</a>
+                        <a href="/tatausaha/suratkeluar/"><i class="fa fa-caret-right"></i> Surat Keluar</a>
                     </li>
                     <li>
-                        <a href="/tatausaha/surat_masuk">Surat Masuk</a>
+                        <a href="/tatausaha/suratmasuk/"><i class="fa fa-caret-right"></i> Surat Masuk</a>
                     </li>
                     <li>
-                        <a href="/tatausaha/tugas_belajar">Tugas Belajar</a>
+                        <a href="/tatausaha/tugasbelajar/"><i class="fa fa-caret-right"></i> Tugas Belajar</a>
                     </li>
                 </ul>
             </li>
@@ -42,19 +42,19 @@
               <a href="#"><i class="fa fa-globe"></i> Operaional <span class="fa arrow"></span></a>
               <ul class="nav nav-second-level">
                 <li>
-                  <a href="/operasional/gempabumi">Gempabumi</a>
+                  <a href="/operasional/gempabumi"><i class="fa fa-caret-right"></i> Gempabumi</a>
                 </li>
                 <li>
-                  <a href="/operasional/listrik_udara">Listrik Udara</a>
+                  <a href="/operasional/listrik_udara"><i class="fa fa-caret-right"></i> Listrik Udara</a>
                 </li>
                 <li>
-                  <a href="/operasional/magnetbumi">Magnetbumi</a>
+                  <a href="/operasional/magnetbumi"><i class="fa fa-caret-right"></i> Magnetbumi</a>
                 </li>
                 <li>
-                  <a href="/operasional/hujan">Hujan</a>
+                  <a href="/operasional/hujan"><i class="fa fa-caret-right"></i> Hujan</a>
                 </li>
                 <li>
-                  <a href="/operasional/laporan">Laporan</a>
+                  <a href="/operasional/laporan"><i class="fa fa-caret-right"></i> Laporan</a>
                 </li>
               </ul>
             </li>
